// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetectorDescriptionList render for detector with anomaly values 1`] = `
<EuiDescriptionList
  align="left"
  className="rule-detector-description-list"
  compressed={false}
  listItems={
    Array [
      Object {
        "description": "responsetimes",
        "title": <FormattedMessage
          defaultMessage="Job ID"
          id="xpack.ml.ruleEditor.detectorDescriptionList.jobIdTitle"
          values={Object {}}
        />,
      },
      Object {
        "description": "mean response time",
        "title": <FormattedMessage
          defaultMessage="Detector"
          id="xpack.ml.ruleEditor.detectorDescriptionList.detectorTitle"
          values={Object {}}
        />,
      },
      Object {
        "description": <FormattedMessage
          defaultMessage="actual {actual}, typical {typical}"
          id="xpack.ml.ruleEditor.detectorDescriptionList.selectedAnomalyDescription"
          values={
            Object {
              "actual": 50,
              "typical": 1.23,
            }
          }
        />,
        "title": <FormattedMessage
          defaultMessage="Selected anomaly"
          id="xpack.ml.ruleEditor.detectorDescriptionList.selectedAnomalyTitle"
          values={Object {}}
        />,
      },
    ]
  }
  textStyle="normal"
  type="column"
/>
`;

exports[`DetectorDescriptionList render for population detector with no anomaly values 1`] = `
<EuiDescriptionList
  align="left"
  className="rule-detector-description-list"
  compressed={false}
  listItems={
    Array [
      Object {
        "description": "population",
        "title": <FormattedMessage
          defaultMessage="Job ID"
          id="xpack.ml.ruleEditor.detectorDescriptionList.jobIdTitle"
          values={Object {}}
        />,
      },
      Object {
        "description": "count by status over clientip",
        "title": <FormattedMessage
          defaultMessage="Detector"
          id="xpack.ml.ruleEditor.detectorDescriptionList.detectorTitle"
          values={Object {}}
        />,
      },
    ]
  }
  textStyle="normal"
  type="column"
/>
`;
